<resources>
    <!--MainActivity-->
    <string name="app_name">Jokenpõ</string>
    <string name="Act_title1">Jokenpõ</string>
    <string name="Act_text1">Bem Vindo ao \n Jokenpõ</string>
    <string name="Act_button1">INICIAR</string>

    <!--MainActivity_Jogador-->
    <string name="ActJ_title1">Jokenpõ</string>
    <string name="ActJ_text1">Jogador 1</string>
    <string name="ActJ_text2">Selecionar jogada</string>
    <string name="ActJ_seletor1">Pedra</string>

    <!--MainActivity_Resultado-->
    <string name="ActR_title1">Jokenpõ</string>
    <string name="ActR_text1">Resultado</string>
    <string name="ActR_text2">O Jogador XXX \n ganhou.</string>

    <!--Padrões  -->
    <string name="bottom_nav_tile_1">Jogador 1</string>
    <string name="bottom_nav_tile_2">Resultado</string>
    <string name="menu_inicial">Inicial</string>

    <string-array name="spinners">
        <item>Pedra</item>
        <item>Papel</item>
        <item>Tesoura</item>
    </string-array>

    <string name="spinerDescricao">Selecione sua Jogada</string>

    <!--   <string name=" ">  </string>  -->
</resources>